# femder

./: .buildinfo  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  README.rst  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  install.doctree
.doctrees/reference/: index.doctree
.doctrees/tutorials/: index.doctree
.github/workflows/: publish_website.yml
_sources/: index.md.txt
_sources/reference/: index.md.txt
_sources/tutorials/: index.md.txt
doc/: make.bat
doc/src/: conf.py  index.rst  install.md  install.rst
doc/src/reference/: index.rst
doc/src/tutorials/: index.rst
docs/src/: index.rst
examples/: README.md  README.rst
examples/jupyter_notebook/example_1_validation/: README.md  (+1 more)
examples/python/: exemple1_ressonance_tube.py
reference/: index.html
requirements/: all_requirements.txt  doc_requirements.txt  runtime_requirements.txt
src/femder/: FEM_3D.py  __init__.py  _conversions.py  bem_3d.py  controlsair.py  fem_3d.py  geometry_generate.py  grid_importing.py  optimization_helpers.py  receivers.py  sources.py
teste_discretizacao_cubos_e_relatorio_qmd/: 27_07_24___relatorio.qmd  current_mesh2.brep  current_mesh2.vtk  teste_discretizacao_cubos.bak  teste_discretizacao_cubos.dwg  teste_discretizacao_cubos.iges  teste_discretizacao_cubos_3_elem.bak  teste_discretizacao_cubos_3_elem.dwg  teste_discretizacao_cubos_3_elem.iges
tutorials/: index.html
(+1 files in other folders)
