[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femder"
dynamic = ["dependencies", "optional-dependencies"]
version = "0.0.1"
authors = [
  { name="Luiz Augusto Alvim", email="luiz.alvim@eac.ufsm.br" },
]
description = "A simple acoustic FEM package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gutoalvim/femder"
"Bug Tracker" = "https://github.com/gutoalvim/femder/issues"

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements/runtime_requirements.txt"] }
optional-dependencies.doc = { file = ["requirements/doc_requirements.txt"] }
optional-dependencies.lint = { file = ["requirements/lint_requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies.dev]
file = [
    "requirements/doc_requirements.txt",
    "requirements/lint_requirements.txt"
]
